<resources>
    <string name="app_name">Utilities</string>
    <string name="main_title">List of tools</string>
    <string name="main_randomChooser">Random Chooser</string>
    <string name="main_cashBoxManager">CashBox Manager</string>
    <string name="titleCBM">CashBoxes</string>
    <string name="titleCBM_online">Cloud</string>
    <string name="title_periodicEntry">Periodic Entries</string>
    <string name="title_deletedCashBox">Recycle Bin</string>
    <string name="title_details">Details</string>
    <string name="title_balance">Balance</string>
    <string name="action_about">About this app</string>
    <string name="roll">Roll The Dice</string>
    <string name="shuffle">Shuffle List</string>
    <string name="randomChooser_title">Contestants</string>
    <string name="button_gotIt">Got it!</string>
    <string name="snackbarEntryModified">Entry modified</string>
    <string name="createCashBoxDialog">Create</string>
    <string name="enterNameDialog">Name</string>
    <string name="cashBox_changeNameButton">Change Name</string>
    <string name="cashBox_cloneButton">Clone</string>
    <string name="nameInUse">Name already in use</string>
    <string name="enterInitCashDialog">Initial Cash</string>
    <string name="newEntry">New Entry</string>
    <string name="newGroupEntry">New Group Entry</string>
    <string name="modifyEntry">Modify Entry</string>
    <string name="addEntryDialog">Add Entry</string>
    <string name="item_totalCash">Total Cash</string>
    <string name="myBalance">My Balance</string>
    <string name="errorMessageAmount">" "</string>
    <string name="error">ERROR</string>
    <string name="between_parenthesis">(%s)</string>
    <string name="noEntriesDelete">"No entries to delete"</string>
    <string name="menu_contextualToolbar">Edit Mode</string>
    <string name="helperEnterNameDialog">Max. 15 characters</string>
    <string name="contentDescriptionLogoMain">App\'s logo</string>
    <string name="saveAs">Save As</string>
    <string name="required">*Required</string>
    <string name="outOfRange">Out of range</string>
    <string name="dialog_hint_name">Name</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="invite">Invite</string>
    <string name="duplicate">Duplicate</string>
    <string name="add">Add</string>
    <string name="cancelDialog">Cancel</string>
    <string name="confirmDeleteDialogConfirm">Delete</string>
    <string name="undo">Undo</string>
    <string name="dialog_hint_username">Username</string>
    <string name="owes">owes</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="paid">paid</string>
    <string name="action_help">Help</string>
    <string name="action_versions">What\'s New?</string>
    <string name="settings">Settings</string>
    <string name="confirmDeleteDialog">Confirm Delete</string>
    <string name="confirmDeleteAllDialog">Confirm Delete All</string>
    <string name="deleteEverywhere">Delete From CashBox</string>
    <string name="deleteParticipantEverywhere">
        Do you want to delete this participant from all entries in the CashBox?
    </string>
    <string name="confirmRestoreAllDialog">Confirm Restore All</string>
    <string name="confirmRecycleAllDialog">Confirm Move All to Recycle Bin</string>
    <string name="snackbarEntriesDeleted">%d deleted</string>
    <string name="snackbarEntriesMoveToRecycle">%d moved to recycle bin</string>
    <string name="snackbarEntriesRestored">%d restored</string>
    <string name="reload_title">Hard Reload From Server</string>
    <string name="reload_message">Are you sure you want to reload from server?
        This will delete the CashBox\'s local data.</string>
    <string name="no_cashbox_selected">No CashBox Selected</string>
    <string name="hintAddGroupDialog">Total Amount</string>
    <string name="menuCBM_showPeriodic">Periodic Tasks</string>
    <string name="menuCBM_recycleBin">Recycle Bin</string>
    <string name="menuCBM_manager">Manager</string>
    <string name="menuCBM_managerOnline">Online</string>
    <string name="menuCBM_notifications">Notifications</string>
    <string name="titleGroupEntryDelete">Delete Group Entry</string>
    <string name="messageGroupDelete">Delete all entries in group?</string>
    <string name="groupEntryAll">All entries</string>
    <string name="groupEntryIndividual">This entry</string>
    <string name="titleGroupEntryModify">Modify Group Entry</string>
    <string name="messageGroupModify">Modify all entries in group?</string>
    <string name="enterDateDialog">%d/%d/%d</string>
    <string name="enterInfoDialog">Info</string>
    <string name="enterAmountDialog">Amount</string>
    <string name="paidBy">paid by %s</string>
    <string name="dialog_inviteTitle">Invite user</string>
    <string name="dialog_selectUsername">Choose Username</string>
    <string name="dialog_text_username">
        Input the username which others will use to find you
        \n(Do not use your real name)
    </string>
    <string name="dialog_acceptInvitation_title">New CashBox Invitation</string>
    <string name="dialog_acceptInvitation_message">%s has invited yo to a shared online cashBox</string>
    <string name="dialog_view_changes">Non viewed changes</string>
    <string name="dialog_nonExistentModify">Modifying deleted entry</string>
    <string name="dialog_nonExistentModify_message">
        You are trying to modify an entry which has already been deleted. Would you like to add a new entry
        or cancel?
    </string>
    <string name="action_reset">Delete All</string>
    <string name="menu_item_reminderOn">Cancel Reminder</string>
    <string name="menu_item_reminderOff">Set Reminder</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_currency">Currency</string>
    <string name="menu_item_invite">Invite</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_reload">Hard Reload</string>
    <string name="action_restoreAll">Restore All</string>
    <string name="currency_dialog_title">Choose Currency</string>
    <string name="display_currency_list">%s (%s)</string>
    <string name="reminder_dialog_invalid_date">Trying to go back in time, uh?</string>
    <string name="reminder_dialog_cancel_title">Scheduled reminder</string>
    <string name="reminder_dialog_cancel_cancel">Cancel</string>
    <string name="reminder_dialog_cancel_keep">Keep</string>
    <string name="reminder_dialog_cancel_message">You will be reminded on\n%s</string>
    <string name="periodic_amountPeriod">%s/%d days</string>
    <string name="repetitions">Repetitions</string>
    <string name="periodic_repetitionsLeft">%d times left</string>
    <string name="periodic_dialog_periodHint">Period (days)</string>
    <string name="periodic_dialog_newPeriodic">New Periodic Entry</string>
    <string name="periodic_menu_title">Add Periodic</string>
    <string name="periodic_dialog_create">Create</string>
    <string name="appHelpTitle">Available Utilities</string>
    <string name="appHelpMessage">
        -\t<b>Random Chooser:</b> perfect for when you need to get a randomly ordered list or flip a coin.
        \n-\t<b>Debt Manager:</b> it will help you remember when a friend borrowed money from you, just in case he "accidentally" forgets.
    </string>
    <string name="cashBoxManager_helpTitle">"Cash Box Manager Help"</string>
    <string name="cashBoxManager_help">
        -\tPress the floating button to add a new CashBox, group entries or periodical entry.
        \n-\tSwipe left to send a CashBox to the recycle bin.
        \n-\tSwipe right to modify a CashBox.
        \n-\tSelect a CashBox by clicking it.
        \n-\tLong press a CashBox to enter edit mode.
    </string>
    <string name="randomChooser_helpTitle">"Random Chooser Help"</string>
    <string name="randomChooser_help">Roll The Dice: returns a randomly chosen item from the list.
        \nShuffle List: shuffles the list.
        \nTo delete an entry, slide the item to the left.
        \nTo delete all entries, click the trashcan symbol at the top of the app.
    </string>
    <string name="changesVersions">
        <b>3.1</b>
        \n-\tAdded the option to include participants in entries
        \n-\tAdded balance view and suggested payments to balance the account
        <b>3.0</b>
        \n-\tAdded online cashBoxes. Now you will be able to have a shared cashBoxes with your
        friends.
        \n-\tAdded lists to Random Chooser. Now you can save your most frequently used lists and
        retrieve them later.
        \n-\tBug fixes
        \n<b>2.4.3</b>
        \n-\tAdded tabs to easily navigate to recycle bin and periodic entries.
        \n-\tFixed memory bugs.
        \n<b>2.4.2</b>
        \n-\tAdded option to choose the display currency of a CashBox.
        \n<b>2.4.1</b>
        \n-\tFixed reminders so they remain even after boot.
        \n-\tFixed bug that made the app consistently crash.
        \n-\tMinor bug fixes.
        \n<b>2.4.0</b>
        \n-\tChoose date of new entry.
        \n-\tChoose start date and delay of periodic entries.
        \n-\tDeleted CashBoxes go to the CashBox Recycle Bin.
        \n-\tGroup entries can be modified or deleted as a whole.
        \n-\tLandscape mode is now more useful.
    </string>
    <string name="pref_general_header">General</string>
    <string name="pref_CBM_header">CashBox Manager</string>
    <string name="pref_CBMOnline_header">CashBox Manager Online</string>
    <string name="pref_defaultStart">Default start screen</string>
    <string name="defaultStart_defaultValue_main">main</string>
    <string name="defaultStart_value_randomChooser">randomChooser</string>
    <string name="defaultStart_value_cashBoxManager">cashBoxManager</string>
    <string name="pref_swipeDelete">Swipe left action</string>
    <string name="pref_summaryOn_swipeDelete">Swiping left deletes the entry</string>
    <string name="pref_summaryOff_swipeDelete">Swiping right deletes the entry</string>
    <string name="pref_notifyPeriodic">Notification Periodic</string>
    <string name="pref_summaryOn_notifyPeriodic">Notify when a periodic entry has been added</string>
    <string name="pref_summaryOff_notifyPeriodic">Do not notify when a periodic entry has been added</string>
    <string name="pref_self_participant">Set my participant name</string>
    <string name="pref_online">Allow online mode</string>
    <string name="pref_online_cancel">Cancel online mode</string>
    <string name="allowOnline_acceptMessage">
        By accepting you give consent to Utilities to save your Online CashBox data.
         This data will be saved anonymously with the username of your choice. Take into account
        that the data introduced may be lost, deleted or modified due to unexpected incidents.
        \nYou can withdraw you consent at any time disabling the \"Allow online mode\" option in Settings.
         By doing so, your user and all your saved data will be deleted from the server.
         The data shared with other users will remain being available to them, but will stop being
         linked to your user.
    </string>
    <string name="allowOnline_cancelMessage">
        By doing so you will withdraw your consent and your user and data will be deleted from the
        server. The data cannot be restored. What do you want to do with your online cashboxes?
    </string>
    <string name="delete">Delete</string>
    <string name="moveLocal">Make local</string>
    <string name="emptyCashBoxManager">No CashBoxes added</string>
    <string name="paidToParticipants">To the following:</string>
    <string name="paidByParticipants">Paid by the following:</string>
</resources>