<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/pref_general_header">
        <ListPreference
            app:key="defaultStart"
            app:title="@string/pref_defaultStart"
            app:entries="@array/defaultStart_entries"
            app:entryValues="@array/defaultStart_values"
            app:defaultValue="@string/defaultValue_defaultStart"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_CBM_header">
        <SwitchPreference
            app:key="swipeLeftDelete"
            app:title="@string/pref_swipeDelete"
            app:summaryOn="@string/pref_summaryOn_swipeDelete"
            app:summaryOff="@string/pref_summaryOff_swipeDelete"
            app:defaultValue="true" />
        <SwitchPreference
            app:key="notifyPeriodic"
            app:title="@string/pref_notifyPeriodic"
            app:summaryOn="@string/pref_summaryOn_notifyPeriodic"
            app:summaryOff="@string/pref_summaryOff_notifyPeriodic"
            app:defaultValue="true" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>