<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_item_invite"
        android:icon="@drawable/ic_person_add_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menu_item_invite" />
    <item
        android:id="@+id/action_item_deleteAll"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom"
        android:title="@string/action_reset" />
    <item
        android:id="@+id/action_item_reminder"
        android:icon="@drawable/ic_alarm_off_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menu_item_reminderOff" />
    <item
        android:id="@+id/action_item_refresh"
        app:showAsAction="never"
        android:title="@string/menu_refresh" />
    <item
        android:id="@+id/action_item_reload"
        app:showAsAction="never"
        android:title="@string/menu_reload" />
    <item
        android:id="@+id/action_item_currency"
        app:showAsAction="never"
        android:title="@string/menu_item_currency" />
    <item
        android:id="@+id/action_item_share"
        android:title="@string/menu_item_share"
        app:showAsAction="never"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />
    <item
        android:id="@+id/action_item_settings"
        android:icon="@drawable/settings_outline"
        app:showAsAction="never"
        android:title="@string/settings" />
</menu>