<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_main_settings"
        android:icon="@drawable/settings_outline"
        app:showAsAction="ifRoom"
        android:title="@string/settings" />
    <item
        android:id="@+id/action_main_versions"
        android:icon="@drawable/ic_new_releases_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_versions" />
    <item
        android:id="@+id/action_main_help"
        android:icon="@drawable/help"
        app:showAsAction="ifRoom"
        android:title="@string/action_help" />
    <item
        android:id="@+id/action_main_about"
        app:showAsAction="never"
        android:title="@string/action_about" />
</menu>