<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_deleteAll"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom"
        android:title="@string/action_reset" />
    <item
        android:id="@+id/action_share"
        android:title="@string/popupCBMShare"
        app:showAsAction="ifRoom"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings_outline"
        app:showAsAction="never"
        android:title="@string/settings" />
    <item
        android:id="@+id/action_help"
        app:showAsAction="never"
        android:title="@string/action_help" />
</menu>