<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.cashBoxManager.CashBoxManagerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:elevation="4dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="@drawable/home"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/CB_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TabLayout"
            app:tabMode="auto">
            <com.google.android.material.tabs.TabItem
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:text="@string/menuCBM_manager"
                android:icon="@drawable/ic_wallet_white_24dp"/>
            <com.google.android.material.tabs.TabItem
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:text="@string/menuCBM_recycleBin"
                android:icon="@drawable/recycle"/>
            <com.google.android.material.tabs.TabItem
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:text="@string/menuCBM_showPeriodic"
                android:icon="@drawable/calendar_clock"/>
<!--            <com.google.android.material.tabs.TabItem-->
<!--                android:layout_height="0dp"-->
<!--                android:layout_width="0dp"-->
<!--                android:text="@string/menuCBM_notifications" />-->
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.vibal.utilities.util.CashBoxViewPager
        android:id="@+id/CB_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
