<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/inputTextMargin"
    android:paddingBottom="@dimen/inputTextMargin"
    android:paddingStart="@dimen/paddingDialog"
    android:paddingEnd="@dimen/paddingDialog">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextInputLayout"
        app:helperTextEnabled="true"
        app:helperText="@string/helperEnterNameDialog"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:hint="@string/enterNameDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/inputLayoutInitCash"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="2"
        android:layout_marginEnd="@dimen/inputTextMargin" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:maxLength="15"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutInitCash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextInputLayout"
        app:errorEnabled="true"
        android:hint="@string/enterInitCashDialog"
        app:layout_constraintStart_toEndOf="@id/inputLayoutName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="@dimen/inputTextMargin" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextInitCash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:inputType="numberSigned|numberDecimal"
            android:digits="0123456789.-,+*/"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>