<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/cash_box_item_entry_input">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputLayoutInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/inputDate"
        android:layout_marginEnd="@dimen/inputTextMargin"
        style="@style/AppTheme.TextInputLayout"
        android:layout_gravity="top"
        app:errorEnabled="true"
        android:hint="@string/enterAmountDialog" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:inputType="numberSigned|numberDecimal|text"
            android:digits="0123456789.-,+*/"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/inputDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/inputLayoutAmount"
        app:layout_constraintBottom_toBottomOf="@id/inputLayoutAmount"
        app:layout_constraintBaseline_toBaselineOf="@id/inputLayoutAmount"
        app:layout_constraintStart_toEndOf="@id/inputLayoutAmount"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/inputTextMargin"
        android:textAppearance="?android:textAppearanceMedium"
        android:textAlignment="center"
        tools:text="@string/enterDateDialog"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutAmount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/inputLayoutAmount"
        app:layout_constraintEnd_toEndOf="@id/inputDate"
        style="@style/AppTheme.TextInputLayout"
        app:helperTextEnabled="true"
        app:helperText="Can be blank"
        app:endIconMode="clear_text"
        android:hint="@string/enterInfoDialog" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:inputType="textMultiLine"
            android:allowUndo="true" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>